added forms model as an input and added an ngModel to tab3 html input

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -19,6 +19,7 @@
       fill="outline"
       (keyup.enter)="addItem(newItem.value);"
       id="listInput"
+      [(ngModel)]="newItemValue"
     />
 
     <ion-button
